// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<TouchableOpacity
  style={
    [
      undefined,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "height": 40,
      },
      {
        "borderRadius": 9999,
      },
      undefined,
      undefined,
    ]
  }
>
  <PeachText
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#F56522",
        },
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "minWidth": 96,
          "paddingLeft": 8,
          "paddingRight": 8,
          "textAlign": "center",
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Text
  </PeachText>
</TouchableOpacity>
`;

exports[`Button should render correctly for medium viewports 1`] = `
<TouchableOpacity
  style={
    [
      undefined,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "height": 40,
      },
      {
        "borderRadius": 9999,
      },
      undefined,
      undefined,
    ]
  }
>
  <PeachText
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#F56522",
        },
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "minWidth": 96,
          "paddingLeft": 8,
          "paddingRight": 8,
          "textAlign": "center",
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Text
  </PeachText>
</TouchableOpacity>
`;

exports[`Button should render correctly while loading 1`] = `
<TouchableOpacity
  style={
    [
      undefined,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "height": 40,
      },
      {
        "borderRadius": 9999,
      },
      undefined,
      undefined,
    ]
  }
>
  <PeachText
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#F56522",
        },
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "minWidth": 96,
          "paddingLeft": 8,
          "paddingRight": 8,
          "textAlign": "center",
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Text
  </PeachText>
  <Loading
    color="#F56522"
    style={
      {
        "height": 20,
        "width": 20,
      }
    }
  />
</TouchableOpacity>
`;

exports[`Button should render correctly with icon 1`] = `
<TouchableOpacity
  style={
    [
      undefined,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "height": 40,
      },
      {
        "borderRadius": 9999,
      },
      undefined,
      undefined,
    ]
  }
>
  <PeachText
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#F56522",
        },
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "minWidth": 96,
          "paddingLeft": 8,
          "paddingRight": 8,
          "textAlign": "center",
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Text
  </PeachText>
  <Icon
    color="#F56522"
    id="alertCircle"
    style={
      {
        "height": 16,
        "width": 16,
      }
    }
  />
</TouchableOpacity>
`;

exports[`NewButton should render correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F56522",
      "borderColor": undefined,
      "borderRadius": 9999,
      "flexDirection": "row",
      "gap": 8,
      "height": 40,
      "justifyContent": "center",
      "minWidth": 128,
      "opacity": 1,
      "paddingLeft": 32,
      "paddingRight": 32,
    }
  }
>
  <Text
    allowFontScaling={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 13,
            "letterSpacing": 0.47,
            "lineHeight": 22,
            "textTransform": "uppercase",
          },
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.54,
            "lineHeight": 26,
            "textTransform": "uppercase",
          },
          {
            "color": "#FFFCFA",
          },
        ],
        false,
      ]
    }
  >
    Text
  </Text>
</View>
`;

exports[`NewButton should render correctly when disabled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,11 @@
  <View
    accessibilityState={
      Object {
        "busy": undefined,
        "checked": undefined,
-       "disabled": undefined,
+       "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
@@ -35,11 +35,11 @@
        "flexDirection": "row",
        "gap": 8,
        "height": 40,
        "justifyContent": "center",
        "minWidth": 128,
-       "opacity": 1,
+       "opacity": 0.33,
        "paddingLeft": 32,
        "paddingRight": 32,
      }
    }
  >"
`;

exports[`NewButton should render correctly when ghost is true 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -27,13 +27,14 @@
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
    style={
      Object {
        "alignItems": "center",
-       "backgroundColor": "#F56522",
-       "borderColor": undefined,
+       "backgroundColor": "transparent",
+       "borderColor": "#FFFCFA",
        "borderRadius": 9999,
+       "borderWidth": 2,
        "flexDirection": "row",
        "gap": 8,
        "height": 40,
        "justifyContent": "center",
        "minWidth": 128,"
`;

exports[`NewButton should render correctly with icon 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -79,6 +79,18 @@
        ]
      }
    >
      Text
    </Text>
+   <test-file-stub
+     fill="#FFFCFA"
+     style={
+       Array [
+         Object {
+           "height": 18,
+           "width": 18,
+         },
+         undefined,
+       ]
+     }
+   />
  </View>"
`;
